--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^6.3.10",
     "next": "12.1.6",
+    "node-fetch": "^3.2.5",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-scroll": "^1.8.7",
+    "react-scroll-parallax": "^3.2.0",
+    "react-tsparticles": "^2.0.6",
+    "sass": "^1.52.2",
+    "tsparticles": "^2.0.6"
   },
   "devDependencies": {
     "eslint": "8.17.0",
