--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node-fetch": "^3.2.5",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.4.0",
     "react-scroll": "^1.8.7",
     "react-scroll-parallax": "^3.2.0",
     "react-tsparticles": "^2.0.6",
